<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2021 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Ambient settings -->
    <string name="ambient_enable">Use ambient display</string>

    <string name="doze_brightness_title">Always on brightness</string>
    <string name="doze_brightness_summary">%s mode is enabled</string>

    <!-- Dirac settings -->
    <string name="dirac_title">Xiaomi Parts</string>
    <string name="dirac_enable">Enable</string>
    <string name="dirac_summary">Customized for xiaomi parts</string>
    <string name="dirac_headset_title">Choose headphones type</string>
    <string name="dirac_preset_title">Choose a preset</string>

    <!-- Dirac settings: Headset types -->
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general_inear">Mi Headphones</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>
    <string name="dirac_headset_ear_four">Mi Quadruple Driver Earphones</string>
    <string name="dirac_headset_piston_typec">Mi In-Ear Headphones (Type-C)</string>
    <string name="dirac_headset_bluetooth_collar">Mi Bluetooth Neckband</string>
    <string name="dirac_headset_bluetooth_linefree">Mi Bluetooth Earphones</string>
    <string name="dirac_headset_redmi_earphones">Redmi Earphones</string>
    <string name="dirac_headset_dual_driver_in_ear">Mi Dual Driver In-ear Earphones</string>

    <!-- Dirac settings: Equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>

    <!-- Dirac settings: Sound Scenes -->
    <string name="music_headset_scenario_select">Choose scene</string>
    <string name="music_headset_scenario_intelligent">Smart</string>
    <string name="music_headset_scenario_music">Music</string>
    <string name="music_headset_scenario_video">Video</string>
    <string name="music_headset_scenario_vocal">Voice</string>

    <!-- QS tile title -->
    <string name="dirac_qs_tile_title">Mi Sound Enhancer</string>

    <!-- Thermal Profiles -->
    <string name="thermal_title">Thermal profiles</string>
    <string name="thermal_summary">Per-app thermal profile configuration</string>
    <string name="thermal_default">Default</string>
    <string name="thermal_benchmark">Benchmark</string>
    <string name="thermal_browser">Browser</string>
    <string name="thermal_camera">Camera</string>
    <string name="thermal_dialer">Dialer</string>
    <string name="thermal_gaming">Gaming</string>
    <string name="thermal_streaming">Streaming</string>

    <!-- Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.\n\nWARNING: Ensure that any headphones are unplugged.</string>

    <!-- Haptic Level Settings -->
    <string name="haptic_title">Haptic feedback</string>
    <string name="haptic_warning">Setting-up haptic level too high may cause permanent hardware damage, use at your own risk</string>
    <string name="haptic_summary">Customize vibration intensity</string>
    <string name="haptic_level_title">Level</string>
    <string name="haptic_level_summary">Amount of vibration intensity</string>
    <string name="haptic_level_summary_incompatible">Feature not supported</string>

    <!-- Add Ons -->
    <string name="dolby">Dolby Atmos™</string>
    <string name="audio">Audio</string>
    <string name="power">Battery Section</string>
    <string name="kprofile">KProfiles</string>
    <string name="add">Add Ons</string>

    <!-- DC dimming settings -->
    <string name="dc_dimming_enable_title">Anti-Flicker Mode</string>
    <string name="dc_dimming_enable_summary">DC Dimming reduces eye strain in low light conditions (Note: reduce image quality)</string>
    <string name="dc_dimming_enable_summary_not_supported">DC Dimming is not currently supported by the kernel</string>

    <!--Display settings fragment -->
    <string name="display_settings_title">Custom display settings</string>
    <string name="display_settings_summary">DC Dimming, High Brightness Mode</string>

    <!-- HBM settings -->
    <string name="hbm_mode_title">High Brightness Mode</string>
    <string name="hbm_mode_summary">High Brightness Mode allows the display panel brightness to go above the maximum stock value. Which helps in improving visibility in direct sunlight</string>
    <string name="hbm_enable_summary_not_supported">HBM is not currently supported by the kernel</string>

    <!-- Refresh Rate tile -->
    <string name="refresh_rate_tile_title">Refresh Rate</string>
    <string name="refresh_rate_title">Dynamic Refresh rate</string>
    <string name="refresh_rate_summary">Change your device\'s display refresh rate for a better experience</string>
    <string name="enable_high_refresh_rate_title">High refresh rate</string>
    <string name="enable_high_refresh_rate_summary">Enable high refresh rate for a smoother experience</string>
    <string name="current_refresh_rate_info">Maximum / minimum refresh rate: <xliff:g id="version">%1$s</xliff:g>Hz - <xliff:g id="version">%2$s</xliff:g>Hz</string>

</resources>
