<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/dirac_title">

    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio">

    <com.android.settingslib.widget.MainSwitchPreference 
        android:defaultValue="false"
        android:key="dirac_enable"
        android:title="@string/dirac_enable" />

    <ListPreference
        android:key="dirac_headset_pref"
        android:entries="@array/dirac_headset_pref_entries"
        android:entryValues="@array/dirac_headset_pref_values"
        android:defaultValue="0"
        android:title="@string/dirac_headset_title"
        android:summary="%s" 
        android:icon="@drawable/ic_dirac_headphone" />

    <ListPreference
        android:key="dirac_preset_pref"
        android:entries="@array/dirac_preset_pref_entries"
        android:entryValues="@array/dirac_preset_pref_values"
        android:defaultValue="0,0,0,0,0,0,0"
        android:title="@string/dirac_preset_title"
        android:summary="%s" 
        android:icon="@drawable/ic_dirac_preset" />

    <ListPreference
        android:key="scenario_selection"
        android:entries="@array/scenario_selector_titles"
        android:entryValues="@array/scenario_selector_values"
        android:defaultValue="4"
        android:title="@string/music_headset_scenario_select"
        android:summary="%s"
        android:icon="@drawable/ic_scenes" />

    <Preference 
        android:key="dolby" 
        android:title="@string/dolby">
        <intent android:targetPackage="com.dolby.daxappui"
                android:action="android.intent.action.MAIN"
                android:targetClass="com.dolby.daxappui.MainActivity"/>
    </Preference>

    <Preference
        android:key="clear"
        android:title="@string/clear_speaker_title">

        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="org.lineageos.settings.speaker.ClearSpeakerActivity"
            android:targetPackage="org.lineageos.settings" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="power"
        android:title="@string/power">

    <Preference
        android:key="termal"
        android:title="@string/thermal_title">

        <intent
            android:action="android.intent.action.MAIN" 
            android:targetClass="org.lineageos.settings.thermal.ThermalSettingsActivity"
            android:targetPackage="org.lineageos.settings" />
    </Preference>

    <Preference
        android:key="profile"
        android:title="@string/kprofile">

        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.kprofiles.battery.KprofilesSettingsActivity"
            android:targetPackage="com.android.kprofiles" />
    </Preference>

    <Preference
        android:key="heptic"
        android:title="@string/haptic_title">

        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="org.lineageos.settings.haptic.HapticLevelActivity"
            android:targetPackage="org.lineageos.settings" />
    </Preference>

    <Preference
        android:key="doze"
        android:title="@string/ambient_display_title">

        <intent
            android:action="android.intent.action.MAIN" 
            android:targetClass="org.lineageos.settings.doze.DozeSettingsActivity"
            android:targetPackage="org.lineageos.settings" />
    </Preference>

<Preference
        android:key="hbm"
        android:title="@string/display_settings_title">

        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="org.lineageos.settings.display.DisplaySettingsActivity"
            android:targetPackage="org.lineageos.settings"/>
    </Preference>

    </PreferenceCategory>

</PreferenceScreen>
